Add fonts + display flex

--- a/src/main.html
+++ b/src/main.html
@@ -21,30 +21,51 @@
                 </nav>
             </header>
 
-            <article>
-                <h2>Info</h2>
-                <p>
-                    <b>🧔🏾 Name: </b>Kamil Fazilov<br />
-                    <b>👴🏾 Age: </b>{{age}}<br />
-                    <b>🌍 Location: </b><a href="https://goo.gl/maps/HNTqQnYNykXL7mTYA">Moscow</a><br />
-                    <b>💼 Working at: </b><a href="https://qiwi.com">QIWI</a><br />
-                    <b>👨🏽‍💻 Position: </b>SYSOPS<br />
-                </p>
-                <h2>Contacts</h2>
-                <p>
-                    <b>✉️ Personal mail: </b><a href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
-                    <b>📨️ Working mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
-                    <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
-                </p>
-                <h2>Socials</h2>
-                <p>
-                    <b>🖥 GitHub: </b><a href="https://github.com/AnotherProksY">AnotherProksY</a><br />
-                    <b>🐦 Twitter: </b><a href="https://twitter.com/AnotherProksy">AnotherProksY</a><br />
-                    <b>📷 Instagram: </b><a href="https://www.instagram.com/rider_na_riske/">rider_na_riske</a><br />
-                    <b>🕹 Steam: </b><a href="https://steamcommunity.com/profiles/76561198078419541">ProksY</a><br />
-                    <b>👾 Discord: </b>AnotherProksY#5471<br />
-                </p>
+            <br />
+            <hr>
+            <br />
+
+            <div style="text-align: center;">
+                <div class="info-container">
+                    <div class="items">
+                        <div class="container">
+                            <h2>About me</h2>
+                            <p>
+                                <b>🧔🏾 Name: </b>Kamil Fazilov<br />
+                                <b>👴🏾 Age: </b>{{age}}<br />
+                                <b>🌍 Location: </b><a href="https://goo.gl/maps/HNTqQnYNykXL7mTYA">Moscow</a><br />
+                                <b>💼 Working at: </b><a href="https://qiwi.com">QIWI</a><br />
+                                <b>👨🏽‍💻 Position: </b>SYSOPS<br />
+                            </p>
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="container">
+                            <h2>Contacts</h2>
+                            <p>
+                                <b>✉️ Personal mail: </b><a href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
+                                <b>📨️ Working mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
+                                <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
+                            </p>
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="container">
+                            <h2>Socials</h2>
+                            <p>
+                                <b>🖥 GitHub: </b><a href="https://github.com/AnotherProksY">AnotherProksY</a><br />
+                                <b>🐦 Twitter: </b><a href="https://twitter.com/AnotherProksy">AnotherProksY</a><br />
+                                <b>📷 Instagram: </b><a href="https://www.instagram.com/rider_na_riske/">rider_na_riske</a><br />
+                                <b>🕹 Steam: </b><a href="https://steamcommunity.com/profiles/76561198078419541">ProksY</a><br />
+                                <b>👾 Discord: </b>AnotherProksY#5471<br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <br />
                 <hr>
+                <br />
                 <h2>Tic-tac-toe</h2>
                     <p>The Web version of the game Tic-Tac-Toe, created on the Python Django</p>
                     <p><img src="static/tic-tac-toe.png" alt="tic-tac-toe"></p>
@@ -54,13 +75,13 @@
                 <h2>Ez-Window</h2>
                     <p>Simple and small plugin for easy resizing and fast navigation between windows</p>
                     <p><img src="static/ez-window.png" alt="ez-window"></p>
-            </article>
+            </div>
 
             <footer>
                 <nav>
                 <ul>
                     <li>
-                    <small>Made with ❤️ by <b>Kamil Fazilov</b>, 2021</small>
+                    <small>Made with ❤️ by <code>Kamil Fazilov</code></small>
                     </li>
                 </ul>
                 </nav>
