--- a/src/main.html
+++ b/src/main.html
@@ -1,96 +1,101 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>AnotherProksY</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="description" content="AnotherProksY's profile"/>
-        <link rel="stylesheet" href="static/tacit.min.css"/>
-        <link rel="stylesheet" href="static/styles.css"/>
-        <link rel="icon" type="image/png" href="static/logo.png"/>
-    </head>
 
-    <body>
-        <section>
-            <header>
-                <nav>
-                    <figure>
-                        <img src="static/logo.png" alt="logo" style="max-height: 100px;">
-                    </figure>
-                    <h1>AnotherProksY</h1>
-                </nav>
-            </header>
+<head>
+    <title>AnotherProksY</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="AnotherProksY's profile" />
+    <link rel="stylesheet" href="static/tacit.min.css" />
+    <link rel="stylesheet" href="static/styles.css" />
+    <link rel="icon" type="image/png" href="static/logo.png" />
+</head>
 
+<body>
+    <section>
+        <header>
+            <nav>
+                <figure>
+                    <img src="static/logo.png" alt="logo" style="max-height: 100px;">
+                </figure>
+                <h1>AnotherProksY</h1>
+            </nav>
+        </header>
+
+        <br />
+        <hr>
+        <br />
+
+        <div style="text-align: center;">
+            <div class="info-container">
+                <div class="items">
+                    <div class="container">
+                        <h2>About me</h2>
+                        <p>
+                            <b>🧔🏾 Name: </b>Kamil Fazilov<br />
+                            <b>👴🏾 Age: </b>{{age}}<br />
+                            <b>🌍 Location: </b><a href="https://goo.gl/maps/HNTqQnYNykXL7mTYA">Moscow</a><br />
+                            <b>💼 Working at: </b><a href="https://qiwi.com">QIWI</a><br />
+                            <b>👨🏽‍💻 Position: </b>SYSOPS<br />
+                        </p>
+                    </div>
+                </div>
+                <div class="items">
+                    <div class="container">
+                        <h2>Contacts</h2>
+                        <p>
+                            <b>✉️ Personal mail: </b><a
+                                href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
+                            <b>📨️ Working mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
+                            <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
+                        </p>
+                    </div>
+                </div>
+                <div class="items">
+                    <div class="container">
+                        <h2>Socials</h2>
+                        <p>
+                            <b>🖥 GitHub: </b><a href="https://github.com/AnotherProksY">AnotherProksY</a><br />
+                            <b>🐦 Twitter: </b><a href="https://twitter.com/AnotherProksy">AnotherProksY</a><br />
+                            <b>📷 Instagram: </b><a
+                                href="https://www.instagram.com/rider_na_riske/">rider_na_riske</a><br />
+                            <b>🕹 Steam: </b><a
+                                href="https://steamcommunity.com/profiles/76561198078419541">ProksY</a><br />
+                            <b>👾 Discord: </b>AnotherProksY#5471<br />
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <br />
             <br />
             <hr>
             <br />
+            <h2>Tic-tac-toe</h2>
+            <p>The Web version of the game Tic-Tac-Toe, created on the Python Django</p>
+            <p><img src="static/tic-tac-toe.png" alt="tic-tac-toe"></p>
+            <h2>Easy-LDAP</h2>
+            <p>Easy to use wrapper for commandline LDAP tools</p>
+            <p><img src="static/ez-ldap.png" alt="ez-ldap"></p>
+            <h2>Ez-Window</h2>
+            <p>Simple and small plugin for easy resizing and fast navigation between windows</p>
+            <p><img src="static/ez-window.png" alt="ez-window"></p>
+        </div>
 
-            <div style="text-align: center;">
-                <div class="info-container">
-                    <div class="items">
-                        <div class="container">
-                            <h2>About me</h2>
-                            <p>
-                                <b>🧔🏾 Name: </b>Kamil Fazilov<br />
-                                <b>👴🏾 Age: </b>{{age}}<br />
-                                <b>🌍 Location: </b><a href="https://goo.gl/maps/HNTqQnYNykXL7mTYA">Moscow</a><br />
-                                <b>💼 Working at: </b><a href="https://qiwi.com">QIWI</a><br />
-                                <b>👨🏽‍💻 Position: </b>SYSOPS<br />
-                            </p>
-                        </div>
-                    </div>
-                    <div class="items">
-                        <div class="container">
-                            <h2>Contacts</h2>
-                            <p>
-                                <b>✉️ Personal mail: </b><a href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
-                                <b>📨️ Working mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
-                                <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
-                            </p>
-                        </div>
-                    </div>
-                    <div class="items">
-                        <div class="container">
-                            <h2>Socials</h2>
-                            <p>
-                                <b>🖥 GitHub: </b><a href="https://github.com/AnotherProksY">AnotherProksY</a><br />
-                                <b>🐦 Twitter: </b><a href="https://twitter.com/AnotherProksy">AnotherProksY</a><br />
-                                <b>📷 Instagram: </b><a href="https://www.instagram.com/rider_na_riske/">rider_na_riske</a><br />
-                                <b>🕹 Steam: </b><a href="https://steamcommunity.com/profiles/76561198078419541">ProksY</a><br />
-                                <b>👾 Discord: </b>AnotherProksY#5471<br />
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-                <hr>
-                <br />
-                <h2>Tic-tac-toe</h2>
-                    <p>The Web version of the game Tic-Tac-Toe, created on the Python Django</p>
-                    <p><img src="static/tic-tac-toe.png" alt="tic-tac-toe"></p>
-                <h2>Easy-LDAP</h2>
-                    <p>Easy to use wrapper for commandline LDAP tools</p>
-                    <p><img src="static/ez-ldap.png" alt="ez-ldap"></p>
-                <h2>Ez-Window</h2>
-                    <p>Simple and small plugin for easy resizing and fast navigation between windows</p>
-                    <p><img src="static/ez-window.png" alt="ez-window"></p>
-            </div>
-
-            <footer>
-                <nav>
+        <footer>
+            <nav>
                 <ul>
                     <li>
-                    <small>Made with ❤️ by <code>Kamil Fazilov</code></small>
+                        <small>Made with ❤️ by <code>Kamil Fazilov</code></small>
                     </li>
                 </ul>
-                </nav>
-                <nav>
+            </nav>
+            <nav>
                 <ul>
                     <li><small><a href="https://github.com/AnotherProksY/MyProfile">Code</a></small></li>
                 </ul>
-                </nav>
-            </footer>
-        </section>
-    </body>
+            </nav>
+        </footer>
+    </section>
+</body>
+
 </html>
