Add png to assets + changed mail in "About me"

--- a/src/main.html
+++ b/src/main.html
@@ -44,9 +44,9 @@
                     <div class="container">
                         <h2>Contacts</h2>
                         <p>
-                            <b>✉️ Personal mail: </b><a
+                            <b>✉️ Mail: </b><a
                                 href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
-                            <b>📨️ Working mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
+                            <b>📨️ Mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
                             <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
                         </p>
                     </div>
@@ -91,7 +91,7 @@
             </nav>
             <nav>
                 <ul>
-                    <li><small><a href="https://github.com/AnotherProksY/MyProfile">Code</a></small></li>
+                    <li><small><a href="https://github.com/AnotherProksY/MyPage">Code</a></small></li>
                 </ul>
             </nav>
         </footer>
